# UCS654-Predictive-Analytics

./: .gitignore  README.md
Assignment - Data Generation using Modelling and Simulation for ML/: README.md  SIR_Simulation.ipynb  generated_dataset.csv
Assignment - Mashup/: .gitignore  README.md  requirements.txt
Assignment - Mashup/Program 1/: 102497014.py  README.md
Assignment - Mashup/Program 2/: README.md  app.py
Assignment - Mashup/Program 2/templates/: index.html
Assignment - Topsis for Pretrained Models/: README.md  TOPSIS_Text_Conversational.ipynb  dataset.csv
Assignment 1 Advanced Mathematics/: Assignment_1_(Advanced_Mathematics).ipynb  README.md
Assignment 2 Advanced Mathematics/: Assignment2(Advanced_Mathematics).ipynb  README.md
Assignment-TOPSIS/: README.md
Assignment-TOPSIS/Part1/: README.md  data.csv  result.csv  topsis.py
Assignment-TOPSIS/Part2_PyPI_Package/: README.md
Assignment-TOPSIS/Part2_PyPI_Package/Topsis_Santushti_102497014.egg-info/: PKG-INFO
Assignment-TOPSIS/Part3_Web_Service/: README.md  app.py
Assignment-TOPSIS/Part3_Web_Service/templates/: index.html
Assignment-TOPSIS/Topsis-Santushti-102497014/: setup.cfg
Assignment-TOPSIS/Topsis-Santushti-102497014/Topsis_Santushti_102497014.egg-info/: SOURCES.txt
Assignment-TOPSIS/Topsis-Santushti-102497014/topsis/: topsis.py
Assignment1 Sampling/: README.md  Sampling.ipynb
