[metadata]
name = Topsis-Santushti-102497014
version = 1.0.3
author = Santushti
description = Python package for TOPSIS
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    pandas
    numpy

[options.entry_points]
console_scripts =
    topsis=topsis.topsis:main
